--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
              <div id="contact">
                 <address>
                     Entrar em contato <br>
-                    012-1234-4567
+                    (31) 998477112
                 </address>
              </div>
              <div class="maps">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d133454.63085652507!2d-52.87666613730566!3d-28.481879876520473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fd492498d6957f%3A0x9a8b601ccba4050d!2sN%C3%A3o-Me-Toque+-+RS%2C+99470-000!5e0!3m2!1spt-BR!2sbr!4v1526132456834" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15006.128278267548!2d-43.93169277116015!3d-19.901971259672052!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69a3dedb6355b%3A0xfd5db97f7e294e54!2sSagrada%20Fam%C3%ADlia%2C%20Belo%20Horizonte%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1661531006187!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
              
              <footer class="rodape">
